--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,11 @@
 apply plugin: 'com.android.application'
 android {
-    signingConfigs {
-        main {
-            storeFile file("../../../app_maxlock_key")
-            keyAlias 'MaxLock'
-            storePassword System.getenv("KSTOREPWD")
-            keyPassword System.getenv("KEYPWD")
-        }
-    }
+
     compileSdkVersion 22
     buildToolsVersion '22.0.1'
     defaultConfig {
         applicationId "de.Maxr1998.xposed.maxlock"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 22
         versionCode 29
         versionName "5.1.1"
@@ -23,11 +16,11 @@ android {
             minifyEnabled true
             shrinkResources false
             debuggable false
-            signingConfig signingConfigs.main
+
         }
         debug {
             debuggable true
-            signingConfig signingConfigs.main
+
             versionNameSuffix "-beta"
         }
     }
@@ -53,16 +46,16 @@ dependencies {
     // From Maven or other repositories
     compile 'com.robbypond:android-ColorPickerPreference:1.11.1'
     compile 'com.anjlab.android.iab.v3:library:1.0.24@aar'
-    compile 'com.commonsware.cwac:anddown:0.2.+'
+    compile 'com.commonsware.cwac:anddown:0.2.4'
     compile 'com.google.guava:guava:18.0'
     compile 'com.nispok:snackbar:2.10.6'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
-    compile 'com.android.support:support-v4:22.1.0'
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:palette-v7:22.1.0'
     compile 'com.android.support:recyclerview-v7:22.1.0'
-    compile 'com.google.android.gms:play-services-base:7.0.0'
-    compile 'com.google.android.gms:play-services-analytics:7.0.0'
+    compile 'com.google.android.gms:play-services-base:7.3.0'
+    compile 'com.google.android.gms:play-services-analytics:7.3.0'
     // Local files
     compile(name: 'PatternLock', ext: 'aar')
     compile(name: 'android-support-v4-preferencefragment', ext: 'aar')
